# riscv-unified-db-hmc-clinic-team-

./: .default-gems  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.adoc  Gemfile  README.adoc  REUSE.toml  Rakefile  codecov.yml  container.def  do  package-lock.json  package.json  pyproject.toml  renovate.json  renovate.json5  requirements.txt
.agents/skills/extract-instructions-from-subsection/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/actions/mise-setup/: action.yml
.github/actions/singularity-setup/: action.yml
.github/workflows/: autofix-comment.yml  autofix.yaml  ci.yml  container.yml  copilot-setup-steps.yml  deploy.yml  docs-preview.yml  gem_bump.yml  nightly.yml  pages.yml  pr_title_check.yml  regress.yml  release_gems.yml  release_udb_gem.yml  schema-release.yml  toolchain-container.yml
.toolchain/: .build-elfutils.sh  Dockerfile  check_cxx.cmake
backends/cfg_html_doc/: adoc_gen.rake  html_gen.rake
backends/cpp_hart_gen/: CMakeLists.txt  README.adoc  tasks.rake
backends/cpp_hart_gen/cpp/include/udb/: GDBServer.hpp  NotificationHandler.hpp  Tracer.hpp  bits.hpp  elf_reader.hpp  hart.hpp  htif.hpp  inst.hpp  iss_soc_model.hpp  util.hpp
backends/cpp_hart_gen/cpp/src/: GDBServer.cpp  NotificationHandler.cpp  Tracer.cpp  elf_reader.cpp  htif.cpp  iss.cpp
backends/cpp_hart_gen/cpp/test/: test_regfile.cpp
backends/cpp_hart_gen/lib/: constexpr_pass.rb  gen_cpp.rb  template_helpers.rb  written_pass.rb
backends/cpp_hart_gen/templates/: csrs.hxx.erb  csrs_impl.hxx.erb  db_data.hxx.erb  hart.hxx.erb  hart_factory.hxx.erb  hart_impl.hxx.erb  idl_funcs_impl.hxx.erb  inst.hxx.erb  params.hxx.erb
backends/generators/Go/: go_generator.py
backends/instructions_appendix/: all_instructions.golden.adoc  tasks.rake
backends/instructions_appendix/templates/: instructions.adoc.erb
backends/portfolio/templates/: csr_appendix.adoc.erb  ext_appendix.adoc.erb  inst_appendix.adoc.erb
backends/prm_pdf/templates/: csr.adoc.erb  ext.adoc.erb  prm_main.adoc.erb
backends/proc_ctp/templates/: proc_ctp.adoc.erb
backends/profile/: tasks.rake
cfgs/: example_rv64_with_overlay.yaml  mc100-32-full-example.yaml  qc_iu.yaml  rv32-riscv-tests.yaml  rv32-vector.yaml  rv64-riscv-tests.yaml  rv64-vector.yaml
cfgs/profile/: README.adoc  RVA20S64.yaml  RVA20U64.yaml  RVA22S64.yaml  RVA22U64.yaml  RVA23M64.yaml  RVA23S64.yaml  RVA23U64.yaml  RVB23M64.yaml  RVB23S64.yaml  RVB23U64.yaml  RVI20U32.yaml  RVI20U64.yaml
doc/: HOW-DO-I.adoc  README.md  docusaurus.config.ts  idl.adoc  package.json  regress-test-infrastructure.adoc  schemas.adoc  sidebars.ts
doc/docs/: placeholder.md
doc/docs/concepts/: _category_.json
doc/docs/concepts/configurations/: _category_.json  overview.md
doc/docs/developer/: tools-overview.mdx
doc/docs/idl/: builtins.mdx  common-misunderstandings.mdx  control-flow.mdx  data-types.mdx  for-spec-writers.mdx  functions.mdx  guide-for-c-users.mdx  guide-for-verilog-users.mdx  idlc.md  in-csrs.mdx  in-instructions.mdx  index.mdx  literals.mdx  operators.mdx  overview.mdx  quick-reference.mdx  scope.mdx  standard-library.mdx  type-conversions.mdx  variables.mdx
doc/docs/intro/: doc-status.md  what-is-udb.mdx
doc/docs/schemas/: _category_.json  index.mdx
doc/planning/: README.md  decisions.md  documentation-implementation-plan.md  documentation-plan.md  documentation-site-design.md
doc/schema/: yaml-style-constraints.adoc
doc/src/css/: custom.css
doc/src/pages/: index.module.css  index.tsx  markdown-page.md
doc/src/prism/: idl.js
doc/src/theme/: prism-include-languages.js
ext/auto-inst/: parsing.py  test_parsing.py
sorbet/: config
sorbet/rbi/gems/: activesupport@8.1.3.rbi  bigdecimal@4.1.1.rbi  commander@5.0.0.rbi  highline@3.0.1.rbi  json@2.19.3.rbi  mocha@3.1.0.rbi  ostruct@0.6.3.rbi  tty-spinner@0.9.3.rbi  write_xlsx@1.15.0.rbi  z3@0.0.20251017.rbi
sorbet/tapioca/: config.yml  require.rb
spec/schemas/: README.adoc  config_schema.json  csr_schema.json  exception_code_schema.json  ext_schema.json  inst_opcode_schema.json  inst_schema.json  inst_subtype_schema.json  inst_type_schema.json  inst_var_schema.json  inst_var_type_schema.json  inst_variable_metadatas.json  interrupt_code_schema.json  manual_schema.json  manual_version_schema.json  mmr_schema.json  non_isa_schema.json  param_schema.json  prm_schema.json  proc_cert_class_schema.json  proc_cert_model_schema.json  profile_family_schema.json  profile_release_schema.json  profile_schema.json  register_file_schema.json  schema_defs.json
spec/std/isa/csr/: misa.yaml  (+9 more)
tests/data/golden/: REUSE.toml  Xqci@0.13.0.adoc
tests/golden/: REUSE.toml  all_instructions.golden.adoc  mc100-32-full-example.golden.h  mc100-32-full-example.golden.svh  profile_extensions.golden
tests/isa/: Makefile
tools/eclipse/: .gitignore  README.md
tools/eclipse/udb-vscode/: .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
tools/internal-gems/: README.md
tools/internal-gems/schema_doc_gen/: schema_doc_gen.gemspec
tools/mcp_gen_server/: server.py
tools/node/idl-grammar-gen/: index.js
tools/python/: convertudb.py  profile_extensions.golden  tasks.rake
tools/python/auto-inst/: parsing.py  test_parsing.py
tools/ruby-gems/: tasks.rake
tools/ruby-gems/idl_highlighter/: idl_highlighter.gemspec
tools/ruby-gems/idlc/: Gemfile  Rakefile  idlc.gemspec  sorbet
tools/ruby-gems/udb/: RELEASE.md  REUSE.toml  Rakefile  udb.gemspec
tools/ruby-gems/udb-gen/: Rakefile  udb-gen.gemspec
tools/ruby-gems/udb_helpers/: REUSE.toml  Rakefile  udb_helpers.gemspec
tools/scripts/: check_gem_version_bump.rb  check_schema_versions.rb  gen_gem_versions.rb  gen_schema_index.rb  pages.html.erb  publish_schemas.rb
tools/scripts/language-server-script/: regen-udb-ls.bat  regen-udb-ls.sh
tools/scripts/test/: run.rb
tools/test/: gen_regress.rb  regress-cli.rb  regress-gh-template.yaml  regress-tests.yaml  tests-schema.json
tools/vscode/yamlidl/: README.md
(+1405 files in other folders)
